--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scho-react",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -12,12 +13,15 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "aos": "^3.0.0-beta.6",
+    "eslint": "^9.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "fslightbox-react": "^1.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-toggle-dark-mode": "^1.1.1",
     "vite": "^5.2.9",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^3.5.2"
@@ -31,7 +35,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "browserslist": {
     "production": [
