--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^9.0.0",
     "eslint-config-react-app": "^7.0.1",
     "fslightbox-react": "^1.7.4",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
