--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2",
-    "web-vitals": "^3.5.2"
+    "web-vitals": "^3.5.2",
+    "yet-another-react-lightbox": "^3.18.0"
   },
   "scripts": {
     "start": "vite",
