--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@theme-toggles/react": "^4.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "eslint": "^9.0.0",
     "framer-motion": "^11.1.7",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
@@ -16,26 +15,23 @@
     "vite": "^5.2.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^3.5.2",
     "yet-another-react-lightbox": "^3.18.0"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
     "serve": "vite preview"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "packageManager": "yarn@4.2.1"
+  "packageManager": "yarn@4.2.1",
+  "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "esbuild": "0.21.5",
+    "eslint": "8.x",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "globals": "^15.6.0"
+  }
 }
